--- a/Xamarin.CommunityToolkit.Markup.UnitTests/Xamarin.CommunityToolkit.Markup.UnitTests.csproj
+++ b/Xamarin.CommunityToolkit.Markup.UnitTests/Xamarin.CommunityToolkit.Markup.UnitTests.csproj
@@ -75,7 +75,7 @@
       <Version>3.15.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>5.0.0.5787</Version>
+      <Version>5.0.0.5787</Version>  <!-- download from https://dev.azure.com/xamarin/6fd3d886-57a5-4e31-8db7-52a1b47c07a8/_apis/build/builds/29642/artifacts?artifactName=nuget&api-version=6.0&%24format=zip -->
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
