--- a/Xamarin.CommunityToolkit.Markup/Xamarin.CommunityToolkit.Markup.csproj
+++ b/Xamarin.CommunityToolkit.Markup/Xamarin.CommunityToolkit.Markup.csproj
@@ -9,6 +9,6 @@
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.5787" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.5787" /> <!-- download from https://dev.azure.com/xamarin/6fd3d886-57a5-4e31-8db7-52a1b47c07a8/_apis/build/builds/29642/artifacts?artifactName=nuget&api-version=6.0&%24format=zip -->
   </ItemGroup>
 </Project>
