--- a/Xamarin.CommunityToolkit.Markup.UnitTests/Xamarin.CommunityToolkit.Markup.UnitTests.csproj
+++ b/Xamarin.CommunityToolkit.Markup.UnitTests/Xamarin.CommunityToolkit.Markup.UnitTests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{43798DE5-81F4-4C31-8BB2-AEF46F6732AB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Markup.UnitTests</RootNamespace>
-    <AssemblyName>Markup.UnitTests</AssemblyName>
+    <RootNamespace>Xamarin.CommunityToolkit.Markup.UnitTests</RootNamespace>
+    <AssemblyName>Xamarin.CommunityToolkit.Markup.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -75,7 +75,8 @@
       <Version>3.15.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>5.0.0.5787</Version>  <!-- download from https://dev.azure.com/xamarin/6fd3d886-57a5-4e31-8db7-52a1b47c07a8/_apis/build/builds/29642/artifacts?artifactName=nuget&api-version=6.0&%24format=zip -->
+      <Version>5.0.0.5787</Version>
+      <!-- download from https://dev.azure.com/xamarin/6fd3d886-57a5-4e31-8db7-52a1b47c07a8/_apis/build/builds/29642/artifacts?artifactName=nuget&api-version=6.0&%24format=zip -->
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
