--- a/Xamarin.CommunityToolkit.MarkupNuGetsDownload.targets
+++ b/Xamarin.CommunityToolkit.MarkupNuGetsDownload.targets
@@ -3,7 +3,7 @@
     <NuGetsUrl>https://dev.azure.com/xamarin/6fd3d886-57a5-4e31-8db7-52a1b47c07a8/_apis/build/builds/29642/artifacts?artifactName=nuget&amp;api-version=6.0&amp;%24format=zip</NuGetsUrl>
   </PropertyGroup>
   
-  <Target Name="NuGetsDownload" BeforeTargets="DispatchToInnerBuilds">
+  <Target Name="NuGetsDownload" BeforeTargets="Restore">
     <DownloadFile SourceUrl="$(NuGetsUrl)" DestinationFolder="$(BaseIntermediateOutputPath)">
       <Output TaskParameter="DownloadedFile" ItemName="NuGetsZip" />
     </DownloadFile>
