--- a/Xamarin.CommunityToolkit.Markup.UnitTests/Xamarin.CommunityToolkit.Markup.UnitTests.csproj
+++ b/Xamarin.CommunityToolkit.Markup.UnitTests/Xamarin.CommunityToolkit.Markup.UnitTests.csproj
@@ -1,93 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{43798DE5-81F4-4C31-8BB2-AEF46F6732AB}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Xamarin.CommunityToolkit.Markup.UnitTests</RootNamespace>
-    <AssemblyName>Xamarin.CommunityToolkit.Markup.UnitTests</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="BaseTestFixture.cs" />
-    <Compile Include="BindableLayoutExtensionsTests.cs" />
-    <Compile Include="BindableObjectExtensionsTests.cs" />
-    <Compile Include="BindableObjectMultiBindExtensionsTests.cs" />
-    <Compile Include="BindingHelpers.cs" />
-    <Compile Include="DefaultBindablePropertiesTests.cs" />
-    <Compile Include="ElementExtensionsTests.cs" />
-    <Compile Include="ElementGesturesExtensionsTests.cs" />
-    <Compile Include="FuncConverter.cs" />
-    <Compile Include="GridRowsColumns.cs" />
-    <Compile Include="LabelExtensionsLeftToRightTests.cs" />
-    <Compile Include="LabelExtensionsRightToLeftTests.cs" />
-    <Compile Include="LabelExtensionsTests.cs" />
-    <Compile Include="MarkupBaseTestFixture.cs" />
-    <Compile Include="PaddingElementExtensionsTests.cs" />
-    <Compile Include="RelativeLayoutExtensionsTests.cs" />
-    <Compile Include="StyleTests.cs" />
-    <Compile Include="ViewExtensionsLeftToRightTests.cs" />
-    <Compile Include="ViewExtensionsRightToLeftTests.cs" />
-    <Compile Include="ViewExtensionsTests.cs" />
-    <Compile Include="ViewInFlexLayoutExtensionsTests.cs" />
-    <Compile Include="ViewInGridExtensionsTests.cs" />
-    <Compile Include="VisualElementExtensionsTests.cs" />
-    <Compile Include="MockPlatformServices.cs" />
-    <Compile Include="UnitExpressionSearch.cs" />
+    <ProjectReference Include="..\Xamarin.CommunityToolkit.Markup\Xamarin.CommunityToolkit.Markup.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="NUnit">
-      <Version>3.12.0</Version>
-    </PackageReference>
-    <PackageReference Include="NUnit3TestAdapter">
-      <Version>3.15.1</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Forms">
-      <Version>5.0.0.5787</Version>
-      <!-- download from https://dev.azure.com/xamarin/6fd3d886-57a5-4e31-8db7-52a1b47c07a8/_apis/build/builds/29642/artifacts?artifactName=nuget&api-version=6.0&%24format=zip -->
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Xamarin.CommunityToolkit.Markup\Xamarin.CommunityToolkit.Markup.csproj">
-      <Project>{ab7bc9c1-e0e5-41f0-a1b9-9aedd3a3c91a}</Project>
-      <Name>Xamarin.CommunityToolkit.Markup</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
   <Import Project="..\Xamarin.CommunityToolkit.MarkupNuGetsDownload.targets" />
 </Project>
