--- a/Xamarin.CommunityToolkit.MarkupSample.Android/Xamarin.CommunityToolkit.MarkupSample.Android.csproj
+++ b/Xamarin.CommunityToolkit.MarkupSample.Android/Xamarin.CommunityToolkit.MarkupSample.Android.csproj
@@ -54,8 +54,10 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.5844" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>5.0.0.1709-pre4</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms.DebugRainbows">
       <Version>1.1.4</Version>
     </PackageReference>
