--- a/Xamarin.CommunityToolkit.MarkupSample.UWP/Xamarin.CommunityToolkit.MarkupSample.UWP.csproj
+++ b/Xamarin.CommunityToolkit.MarkupSample.UWP/Xamarin.CommunityToolkit.MarkupSample.UWP.csproj
@@ -143,9 +143,11 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.5844" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>5.0.0.1709-pre4</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms.DebugRainbows">
       <Version>1.1.4</Version>
     </PackageReference>
