--- a/Xamarin.CommunityToolkit.MarkupSample/Xamarin.CommunityToolkit.MarkupSample.csproj
+++ b/Xamarin.CommunityToolkit.MarkupSample/Xamarin.CommunityToolkit.MarkupSample.csproj
@@ -12,9 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="PropertyChanged.Fody" Version="3.2.10" />
-    <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="1.0.0" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.5844" />
+    <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="1.0.0-pre4" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1709-pre4" />
     <PackageReference Include="Xamarin.Forms.DebugRainbows" Version="1.1.4" />
   </ItemGroup>
 </Project>
