--- a/Xamarin.CommunityToolkit.MarkupSample/Xamarin.CommunityToolkit.MarkupSample.csproj
+++ b/Xamarin.CommunityToolkit.MarkupSample/Xamarin.CommunityToolkit.MarkupSample.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PropertyChanged.Fody" Version="3.3.1" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.3.1" PrivateAssets="all" />
     <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="1.0.0-pre5" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.1709-pre4" />
