--- a/Xamarin.CommunityToolkit.MarkupSample/Xamarin.CommunityToolkit.MarkupSample.csproj
+++ b/Xamarin.CommunityToolkit.MarkupSample/Xamarin.CommunityToolkit.MarkupSample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,8 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PropertyChanged.Fody" Version="3.2.10" />
-    <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="1.0.0-pre4" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.3.1" PrivateAssets="all" />
+    <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="1.0.0-pre5" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.1709-pre4" />
     <PackageReference Include="Xamarin.Forms.DebugRainbows" Version="1.1.4" />
