Add job to build samples

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ variables:
   RunPoliCheck: 'false'
   PathToCsproj: 'src/CommunityToolkit/Xamarin.CommunityToolkit/Xamarin.CommunityToolkit.csproj'
   PathToMarkupCsproj: 'src/Markup/Xamarin.CommunityToolkit.Markup/Xamarin.CommunityToolkit.Markup.csproj'
+  PathToSln: 'Xamarin.CommunityToolkit.Sample.sln'
 
 resources:
   repositories:
@@ -44,6 +45,18 @@ schedules:
     - main
 
 jobs:
+  - job: build_windows_samples
+    displayName: Build Windows Samples
+    pool:
+      vmImage: windows-2019
+    steps:
+      - task: MSBuild@1
+        displayName: Build Solution
+        inputs:
+          solution: $(PathToSln)
+          configuration: Release
+          msbuildArguments: '/restore /t:Build /p:ContinuousIntegrationBuild=true /p:Deterministic=false'
+      
   - job: build_windows
     displayName: Build Windows Library
     pool:
