--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -178,9 +178,7 @@ jobs:
       displayName: Signing NuGets
       dependsOn: build_windows
       pool:
-        name: VSEng-XamarinCustom
-        demands:
-          - corpnet
+        name: windows-latest
       condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
       steps:
         # don't checkout code and sign the packages
