--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -179,3 +179,5 @@ jobs:
 
   - ${{ if eq(variables['System.TeamProject'], 'devdiv') }}:
     - template: sign-artifacts/jobs/v2.yml@internal-templates
+      parameters:
+        dependsOn: [ build_windows ]
