--- a/SampleApp/XCT.Sample.Android/Xamarin.CommunityToolkit.Sample.Android.csproj
+++ b/SampleApp/XCT.Sample.Android/Xamarin.CommunityToolkit.Sample.Android.csproj
@@ -106,7 +106,7 @@
     <AndroidResource Include="Resources\drawable\info.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Xamarin.CommunityToolkit\Xamarin.CommunityToolkit.csproj">
+    <ProjectReference Include="..\..\src\CommunityToolkit\Xamarin.CommunityToolkit\Xamarin.CommunityToolkit.csproj">
       <Project>{b0dcdf81-953d-47da-a7d4-0565339bf07c}</Project>
       <Name>Xamarin.CommunityToolkit</Name>
     </ProjectReference>
