Add LocalizedString class for automatic  ViewModel string updates (#750)
* Add LocalizedString

* Update test name

* Remove from NETSTANDARD1_0

* LangVersion latest

* Revert "LangVersion latest"

This reverts commit e22a4c12759c682e810af236e91adcdf2e0c458c.

* Not using linq discard

* Fix test

* Fix test. Add constructor with localizationManager

* Add new feature to sample app

* Add Dispose() to unsubscribe from localizationManager.PropertyChanged

* Fix Sample localization resources generation

* Update sample app to change AppResources.Culture

* Update LocalizedString to use ObservableObject

* Return unsubscribing from localizationManager.PropertyChanged

* Add WeakSubscribe

* Refactor LocalizedString to use WeakSubscribe

* Add test to ensure instance of LocalizedString is disposed

* Dont create instance of LocalizationResourceManager

* Add null checks to WeakSubscribe

* Invoke action with less code

null check has already been done

* Replace spaces with tabs

* Revert "Use Single for getting culture"

* added one more unit test

Co-authored-by: Pedro Jesus <pedrojesus.cefet@gmail.com>

--- a/samples/XCT.Sample/Xamarin.CommunityToolkit.Sample.csproj
+++ b/samples/XCT.Sample/Xamarin.CommunityToolkit.Sample.csproj
@@ -19,7 +19,25 @@
     <PackageReference Include="Xamarin.Forms.DebugRainbows" Version="1.1.4" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.3.0.759" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <Compile Update="Resx\AppResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>AppResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Update="Resx\AppResources.es.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resx\AppResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+    
   <ItemGroup>
     <ProjectReference Include="..\..\src\CommunityToolkit\Xamarin.CommunityToolkit\Xamarin.CommunityToolkit.csproj" />
     <ProjectReference Include="..\..\src\Markup\Xamarin.CommunityToolkit.Markup\Xamarin.CommunityToolkit.Markup.csproj" />
